// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template components renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Breakout
    </div>
  </div>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Top content
    </div>
  </div>
  <div
    className="ds-template-sidebar css-0"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Left sidebar
    </div>
  </div>
  <main
    className="css-0"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More content
    </div>
  </main>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Bottom content
    </div>
  </div>
</div>
`;

exports[`Template components renders the UI snapshot correctly 2`] = `
<div
  className="css-1xdhyk6"
>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Breakout
    </div>
  </div>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Top content
    </div>
  </div>
  <main
    className="css-0"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More content
    </div>
  </main>
  <div
    className="ds-template-sidebar css-0"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Right sidebar
    </div>
  </div>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Bottom content
    </div>
  </div>
</div>
`;

exports[`Template components renders the UI snapshot correctly 3`] = `
<div
  className="css-1xdhyk6"
>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Breakout
    </div>
  </div>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Top content
    </div>
  </div>
  <main
    className="css-0"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More content
    </div>
  </main>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Bottom content
    </div>
  </div>
</div>
`;

exports[`Template components renders the UI snapshot correctly 4`] = `
<div
  className="css-1xdhyk6"
>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Breakout
    </div>
  </div>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Top content
    </div>
  </div>
  <main
    className="css-0"
    id="mainContent"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More content
    </div>
  </main>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Bottom content
    </div>
  </div>
</div>
`;

exports[`Template components renders the UI snapshot correctly 5`] = `
<div
  className="css-kle7zy"
>
  <main
    className="css-0"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More content
    </div>
  </main>
</div>
`;

exports[`Template components renders the UI snapshot correctly 6`] = `
<div
  className="css-1xdhyk6"
  data-testid="props"
>
  <main
    className="css-0"
  >
    <div
      className="placeholder placeholder--undefined"
    >
      Main content
    </div>
    <div
      className="placeholder placeholder--short"
    >
      More content
    </div>
  </main>
</div>
`;
